--- a/style/architects.css
+++ b/style/architects.css
@@ -7,3 +7,42 @@
     font-family: 'Roboto', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+
+/* Header section Styles */
+.header {
+    background: rgba(255, 144, 14, 0.10);
+}
+
+.nav-title {
+    color: #131313;
+    font-size: 2.5rem;
+    font-weight: 700;
+
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 190px;
+
+}
+
+nav>ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav li {
+    margin-right: 35px;
+    list-style: none;
+    font-weight: 500;
+    font-size: 1.2rem;
+    color: #424242;
+
+}
+
+nav li a {
+    text-decoration: none;
+
+}
