--- a/style/architects.css
+++ b/style/architects.css
@@ -30,7 +30,7 @@
 }
 
 .nav-title {
-    color: #131313;
+    color: #097cb6fe;
     font-size: 2.5rem;
     font-weight: 700;
 
@@ -99,6 +99,7 @@ nav li a:hover {
 }
 
 /* Responsive Styles */
+/* Mobile small devices */
 @media screen and (max-width:576px) {
 
     .header {
@@ -118,4 +119,19 @@ nav li a:hover {
         font-size: 2rem;
 
     }
+}
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .header {
+        padding: 50px;
+
+    }
+
+    nav {
+        flex-direction: column;
+    }
+    .nav-title {
+        margin-bottom: 20px;
+    }
+
 }
