--- a/style/architects.css
+++ b/style/architects.css
@@ -25,6 +25,7 @@
 
 /* Header section Styles */
 .header {
+
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 190px;
 }
@@ -37,6 +38,7 @@
 }
 
 nav {
+   
     display: flex;
     justify-content: space-between;
     margin-bottom: 102px;
@@ -71,7 +73,7 @@ nav li a:hover {
 /* banner styles */
 
 .banner-content {
-    max-width: 880px;
+    max-width: 1440px;
     text-align: center;
     margin: 0 auto;
 }
@@ -98,6 +100,72 @@ nav li a:hover {
 
 }
 
+ styles */
+
+
+main {
+    max-width: 1300px;
+    margin: 0 auto;
+
+}
+
+.team-container {
+
+    display: flex;
+    align-items: center;
+}
+
+.team-img-container {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+
+}
+
+.team-content {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.team-title{
+    margin-bottom: 24px;
+}
+.team-title,
+.quick-list {
+    color: #727272;
+    font-size: 2.9rem;
+    font-weight: 500;
+    
+
+}
+
+.team-title,.of-our {
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+
+}
+
+.team-title, .the-features {
+    color: #FF900E;
+    font-size: 45px;
+    font-weight: 700;
+
+}
+.team-description {
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: justify;
+margin-bottom: 32px;
+}
+
+
+
+
+
+
+
 /* Responsive Styles */
 /* Mobile small devices */
 @media screen and (max-width:576px) {
@@ -120,6 +188,7 @@ nav li a:hover {
 
     }
 }
+
 /* tablet or medium devices */
 @media screen and (min-width:576px) and (max-width:992px) {
     .header {
@@ -130,8 +199,11 @@ nav li a:hover {
     nav {
         flex-direction: column;
     }
+
     .nav-title {
         margin-bottom: 20px;
     }
 
 }
+
+/* main
