--- a/style/architects.css
+++ b/style/architects.css
@@ -73,7 +73,7 @@ nav li a:hover {
 /* banner styles */
 
 .banner-content {
-    max-width: 1440px;
+    max-width: 820px;
     text-align: center;
     margin: 0 auto;
 }
@@ -124,7 +124,7 @@ main {
 }
 
 .team-content {
-    padding-left: 70px;
+    padding-left: 40px;
     padding-right: 70px;
 }
 .team-title{
@@ -175,10 +175,15 @@ margin-bottom: 32px;
 
     }
 
-    nav {
+    nav ,
+    .team-container
+    {
         flex-direction: column;
     }
-
+    .team-img-container{
+        grid-template-columns: repeat(1 , 1fr);
+        padding: 10px;
+    }
     .nav-title {
         margin-bottom: 20px;
     }
@@ -187,6 +192,7 @@ margin-bottom: 32px;
         font-size: 2rem;
 
     }
+    
 }
 
 /* tablet or medium devices */
@@ -206,4 +212,3 @@ margin-bottom: 32px;
 
 }
 
-/* main
