--- a/style/architects.css
+++ b/style/architects.css
@@ -23,6 +23,14 @@
 
 }
 
+.text-light-gray {
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: justify;
+    margin-bottom: 32px;
+}
+
 /* Header section Styles */
 .header {
 
@@ -38,7 +46,7 @@
 }
 
 nav {
-   
+
     display: flex;
     justify-content: space-between;
     margin-bottom: 102px;
@@ -48,6 +56,7 @@ nav {
 
 nav>ul {
     display: flex;
+
 
 
 }
@@ -86,13 +95,7 @@ nav li a:hover {
 
 }
 
-.banner-description {
-    color: #727272;
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: justify;
 
-}
 
 .banner img {
     margin-top: 30px;
@@ -100,19 +103,19 @@ nav li a:hover {
 
 }
 
- styles */
-
+/* main styles  */
 
 main {
-    max-width: 1300px;
+    max-width: 1120px;
     margin: 0 auto;
-
 }
+
 
 .team-container {
 
     display: flex;
     align-items: center;
+    margin-bottom: 138px;
 }
 
 .team-img-container {
@@ -124,44 +127,79 @@ main {
 }
 
 .team-content {
-    padding-left: 40px;
-    padding-right: 70px;
+    padding-left: 50px;
+
 }
-.team-title{
+
+.team-title {
     margin-bottom: 24px;
 }
+
 .team-title,
 .quick-list {
     color: #727272;
     font-size: 2.9rem;
     font-weight: 500;
-    
+
 
 }
 
-.team-title,.of-our {
+.team-title,
+.of-our {
     color: #131313;
     font-size: 45px;
     font-weight: 700;
 
 }
 
-.team-title, .the-features {
+.team-title,
+.the-features {
     color: #FF900E;
     font-size: 45px;
     font-weight: 700;
 
 }
-.team-description {
-    color: #727272;
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: justify;
-margin-bottom: 32px;
+
+
+
+
+/* Facts Section Styles */
+.facts{
+    margin-bottom: 100px;
+}
+.facts-title {
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+
 }
 
+.facts-card-container {
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    text-align: center;
 
+}
 
+.card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    padding: 20px;
+}
+
+.card-stats {
+    color: #424242;
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.card-title {
+    color: #727272;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
 
 
 
@@ -175,15 +213,16 @@ margin-bottom: 32px;
 
     }
 
-    nav ,
-    .team-container
-    {
+    nav,
+    .team-container {
         flex-direction: column;
     }
-    .team-img-container{
-        grid-template-columns: repeat(1 , 1fr);
+
+    .team-img-container {
+        grid-template-columns: repeat(1, 1fr);
         padding: 10px;
     }
+
     .nav-title {
         margin-bottom: 20px;
     }
@@ -192,7 +231,7 @@ margin-bottom: 32px;
         font-size: 2rem;
 
     }
-    
+
 }
 
 /* tablet or medium devices */
@@ -211,4 +250,3 @@ margin-bottom: 32px;
     }
 
 }
-
