--- a/style/architects.css
+++ b/style/architects.css
@@ -119,7 +119,7 @@ main {
 }
 
 .team-img-container {
-
+   max-width: 342px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
@@ -164,9 +164,10 @@ main {
 
 
 /* Facts Section Styles */
-.facts{
+.facts {
     margin-bottom: 100px;
 }
+
 .facts-title {
     color: #131313;
     font-size: 45px;
@@ -179,6 +180,7 @@ main {
     justify-content: center;
     justify-content: space-around;
     text-align: center;
+    gap: 20px;
 
 }
 
@@ -186,7 +188,7 @@ main {
     border-radius: 8px;
     border: 1px solid #FF900E;
     margin-top: 10px;
-    padding:  30px;
+    padding: 30px;
 }
 
 .card-stats {
@@ -203,8 +205,25 @@ main {
 }
 
 
-
-
+/* SPonspors styles */
+.sponspors {
+    text-align: center;
+}
+.sponspors-title{
+    color:  #131313;
+font-size: 3rem;
+font-weight: 700;
+margin-bottom: 24px;
+}
+.sponspors-img-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    align-items: center;
+}
+.sponspors-img-container img{
+    width: 167px;
+}
 /* Responsive Styles */
 /* Mobile small devices */
 @media screen and (max-width:576px) {
@@ -214,8 +233,8 @@ main {
 
     }
 
-    nav,
-    .team-container {
+    nav,.team-container,
+    .team-container ,.facts-card-container , .sponspors-img-container {
         flex-direction: column;
     }
 
@@ -232,6 +251,9 @@ main {
         font-size: 2rem;
 
     }
+    .sponspors{
+        padding: 10px;
+    }
 
 }
 
@@ -242,7 +264,8 @@ main {
 
     }
 
-    nav {
+    nav,
+    .facts-card-container {
         flex-direction: column;
     }
 
