--- a/style/architects.css
+++ b/style/architects.css
@@ -119,7 +119,7 @@ main {
 }
 
 .team-img-container {
-   max-width: 342px;
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
@@ -160,7 +160,68 @@ main {
 
 }
 
+/* Feature section styles */
+.features {
 
+
+    display: flex;
+    gap: 100px;
+
+}
+
+.features-title {
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    border: none;
+   gap: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+
+
+
+}
+
+.feature-card-title {
+    color: #131313;
+
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.features-img img {
+    width: 500px;
+
+}
+.ten-year-badge{
+    border-radius: 8px;
+background: #FF900E;
+color: #FFF;
+width: 342px;
+padding: 46px 42px;
+}
+.ten-year-badge h2{
+    color: #FFF;
+text-align: center;
+font-size: 4rem;
+font-weight: 700;
+}
+.ten-year-badge p{
+    color: #FFF;
+text-align: center;
+font-size: 1.5rem;
+
+font-weight: 500;
+line-height: 40px;
+}
 
 
 /* Facts Section Styles */
@@ -209,21 +270,25 @@ main {
 .sponspors {
     text-align: center;
 }
-.sponspors-title{
-    color:  #131313;
-font-size: 3rem;
-font-weight: 700;
-margin-bottom: 24px;
+
+.sponspors-title {
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 24px;
 }
+
 .sponspors-img-container {
     display: flex;
     justify-content: space-between;
     gap: 40px;
     align-items: center;
 }
-.sponspors-img-container img{
+
+.sponspors-img-container img {
     width: 167px;
 }
+
 /* Responsive Styles */
 /* Mobile small devices */
 @media screen and (max-width:576px) {
@@ -233,8 +298,11 @@ margin-bottom: 24px;
 
     }
 
-    nav,.team-container,
-    .team-container ,.facts-card-container , .sponspors-img-container {
+    nav,
+    .team-container,
+    .team-container,
+    .facts-card-container,
+    .sponspors-img-container {
         flex-direction: column;
     }
 
@@ -251,7 +319,8 @@ margin-bottom: 24px;
         font-size: 2rem;
 
     }
-    .sponspors{
+
+    .sponspors {
         padding: 10px;
     }
 
